# learn-rust

./: Cargo.toml  README.md
restaurant/: Cargo.toml
restaurant/src/: lib.rs
src/: collections.rs  enum.rs  errors.rs  functions.rs  loops.rs  main.rs  ownership.rs  structures.rs  var_bindings.rs
