[package]
name = "learn-rust"
version = "0.1.0"
authors = ["synczer0 <36100434+synczer0@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winrt = { git = "https://github.com/microsoft/winrt-rs" }